# evaluatio

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  Coverage.yml  pages.yml
evaluatio-bindings/: Cargo.toml  README.md  pyproject.toml
evaluatio-bindings/src/: base.rs  lib.rs
evaluatio-bindings/src/effect_size/: cohen.rs  mod.rs
evaluatio-bindings/src/inference/: bootstrap.rs  ci.rs  hypothesis.rs  mod.rs
evaluatio-bindings/src/metrics/: alignment.rs  bleu.rs  cer.rs  mod.rs  pier.rs  uer.rs  wer.rs
evaluatio-core/: Cargo.toml  README.md
evaluatio-core/src/: err.rs  lib.rs  stats.rs
evaluatio-core/src/comparison/: bootstrap.rs
evaluatio-core/src/effect_size/: cohen.rs
evaluatio-core/src/inference/: bootstrap.rs  ci.rs  mod.rs
evaluatio-core/src/inference/hypothesis/: mod.rs  permutation.rs
evaluatio-core/src/metrics/: alignment.rs  bleu.rs  cer.rs  lcs.rs  mod.rs  pier.rs  uer.rs  wer.rs
evaluatio-docs/: .gitignore  README.md  generate_api_docs.py  myst.yml  pyproject.toml  references.bib
evaluatio-docs/inference/: multiple_testing.md
evaluatio-docs/metrics/: bleu.md  bleurt.md  cer.md  chrf.md  ued.md  uer.md  wer.md
evaluatio-docs/project/: changelog.md  contributing.md  design_philosophy.md
evaluatio-docs/tasks/: asr_evaluation.md
python-src/evaluatio/: _bindings.pyi
python-src/evaluatio/comparison/: bootstrap.py
python-src/evaluatio/effect_size/: cohen.py
python-src/evaluatio/inference/: bootstrap.py  ci.py  hypothesis.py  multiple_testing.py
python-src/evaluatio/metrics/: bleu.py  cer.py  chrf.py  pier.py  uer.py  wer.py
python-tests/inference/: test_multiple_testing.py
python-tests/metrics/: test_bleu.py  test_cer.py  test_uer.py  test_wer.py
