[project]
name = "evaluatio"
version = "0.4.0"
description = "High-performance NLP evaluation and significance testing library"
license = "MIT"
readme = "README.md"
authors = [{ name = "Preben Vangberg", email = "prv21fgt@bangor.ac.uk" }]
maintainers = [{ name = "Preben Vangberg", email = "prv21fgt@bangor.ac.uk" }]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "nlp",
    "metrics",
    "wer",
    "cer",
    "evaluation",
    "word-error-rate",
    "speech-recognition",
    "rust-extensions",
]
dependencies = [
    "numpy >= 1.19, < 1.25; python_version < '3.9'",
    "numpy >= 1.25, < 2.1; python_version >= '3.9' and python_version < '3.12'",
    "numpy >= 1.26, < 2.1; python_version >= '3.12' and python_version < '3.13'",
    "numpy >= 2.1; python_version >= '3.13'",
]

[project.urls]
Homepage = "https://codeberg.org/prvinspace/evaluatio"
Documentation = "https://prvinspace.github.io/evaluatio/"
Repository = "https://codeberg.org/prvinspace/evaluatio"
Issues = "https://codeberg.org/prvinspace/evaluatio/issues"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "evaluatio-bindings/Cargo.toml"
python-source = "python-src"
module-name = "evaluatio._bindings"
interpreter = "python3.8+"

[tool.pytest]
testpaths = ["python-tests"]
pythonpath = ["python-src"]

[dependency-groups]
testing = ["coverage>=7.6.1", "pytest>=8.3.5"]
translation = [
    "sacrebleu>=2.5.1",
]
