[package]
name = "evaluatio-bindings"
version = "0.5.1"
edition = "2021"

[lib]
name = "_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = [
    "extension-module",
    "abi3",
    "abi3-py38",
    "generate-import-lib",
] }
evaluatio-core = { path = "../evaluatio-core", features = ["python"] }
